Native/Test/KL/CORE-130.out
CORE-130.kl:9:3: error: no such function myFunction(Integer, io Integer)
CORE-130.kl:10:3: error: no such function myFunction(Integer, Integer, Integer, io Integer)
